<resources>
    <string name="app_name">GitHub Viewer</string>
    <string name="site_logo">Site logo</string>
    <string name="personal_access_token">Personal access token</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>

    <string name="fragment_name_repositories_list">Repositories list</string>
    <string name="fragment_name_repository">repository/</string>
    <string name="fragment_name_login_screen">Login in</string>

    <string name="error_invalid_username">Error: Invalid username</string>
    <string name="error_username_is_empty">Error: Username is empty</string>
    <string name="error_invalid_token">Error: Invalid access token</string>
    <string name="error_token_is_empty">Error: Personal access is empty</string>

    <string name="item_field_repository_name">Repository-name-android</string>
    <string name="item_field_language">Kotlin</string>
    <string name="item_field_repository_description">Example text of description repository inside repository list</string>

    <string name="repo_info_link">github.com/link/repository_url</string>
    <string name="repo_info_license">License</string>
    <string name="repo_info_license_type">not specified</string>
    <string name="repo_info_stared">stars</string>
    <string name="repo_info_forks">forks</string>
    <string name="repo_info_watchers">watchers</string>
    <string name="repo_info_repository_description">desc</string>

    <string name="exception_title_empty_data">Empty</string>
    <string name="exception_title_http_call">Http call error</string>
    <string name="exception_title_network">Network error</string>
    <string name="exception_title_no_internet">Connection error</string>
    <string name="exception_title_not_found">Not found error</string>
    <string name="exception_title_unauthorized">Unauthorized exception</string>
    <string name="exception_title_unexpected">Something error</string>
    <string name="exception_title_unknown">Unknown error</string>

    <string name="exception_message_empty_data">Received data is empty, try again or update authentication data</string>
    <string name="exception_message_http_call">Oops, something happened while requesting the data server, please try again later</string>
    <string name="exception_message_network">Oops, something happened while connecting to the data server, please try again later</string>
    <string name="exception_message_no_internet">No internet connection, please check your phone settings and try again</string>
    <string name="exception_message_not_found">Resource not found, try again or check links to it</string>
    <string name="exception_message_unauthorized">Authentication token was rejected. Please sign in to the app again</string>
    <string name="exception_message_unexpected">Oops! Something happened, but we will definitely deal with this problem, but then: </string>

    <string name="exception_browser_not_found">Exception: Browser not found</string>
    <string name="url_not_found">Url not found!</string>
    <string name="empty_readme">No Readme.md</string>
    <string name="field_error_message_incorrect">Invalid token</string>
    <string name="field_error_message_is_empty">Field is empty</string>

    <string name="logout_dialog_message">Logout from application?</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_positive">Yes, sure</string>
    <string name="logout_dialog_negative">No, thanks</string>
    <string name="dialog_ok">OK</string>

    <string name="zero_value">0</string>
    <string name="repo_info_license_type_not_specified">Not specified</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="readme_md">Readme.md</string>
    <string name="retry_button">Retry</string>
    <string name="logout">Logout</string>
</resources>