<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="24dp"
    tools:background="@color/gray_blue"
    tools:context=".ui.view.AuthFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/site_logo"
        android:src="@drawable/img_logo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/access_token_container"
        style="@style/TextField.LoginScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/personal_access_token"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_token"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:backgroundTint="@color/green_github"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAppearance="@style/LoginScreen.SignIn.TextStyle"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="@id/sign_in_button"
        app:layout_constraintTop_toTopOf="@id/sign_in_button" />
</androidx.constraintlayout.widget.ConstraintLayout>